[metadata]
name = libraspike-art-python
version = attr: libraspike_art_python.version.__version__
description = Python CFFI Bindings for libraspike-art
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
author = Wataru Taniguchi
author_email = wataru@taniguchifamily.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = libraspike_art_python
setup_requires =
    cffi >= 1.17.1
install_requires =
    cffi >= 1.17.1
    setuptools